--- a/kafka/docker-compose.yaml
+++ b/kafka/docker-compose.yaml
@@ -16,7 +16,7 @@ services:
     entrypoint:
       - /usr/local/bin/bottledwater-docker-wrapper.sh
       - --topic-config=message.timeout.ms=300000
-      - --slot=leap_api_bw
+      - --slot=slot_name
       - --kafka-config=message.send.max.retries=5
       - --kafka-config=retry.backoff.ms=120000
     environment:
